SITE-5072 z-index fix

--- a/web/styles/product-card/kitchen.less
+++ b/web/styles/product-card/kitchen.less
@@ -125,7 +125,7 @@
             text-align: center;
             bottom: 15px;
             left: 0px;
-            z-index: 9999;
+            z-index: 999;
             .prod-photoslider {
                 float: none;
                 .inline-block();
